--- a/page.html
+++ b/page.html
@@ -516,27 +516,25 @@
 
 <div class="spacer"></div>
 
-            <!-- footer Start -->
-            <footer class="footer">
-              <div class="container">
-                <div class="row d-flex ">
-                  <div class="col-lg-6 col-md-12 col-sm-12 mt-3 ">
-                    <span class="text-light mt-2">Events360&copy 2020</span>
-                  </div>
-                  <div class="col-lg-6 col-md-12 col-sm-12 mb-3" ">
-                    <p>Connect with us</p>
-                     <ul class="inline-list social-icons-list" style="padding: 0px">
-                        <li class="list-inline-item"><a href="#" class="social-color-facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                        <li class="list-inline-item" ><a href="#" class="social-color-twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                        <li class="list-inline-item"><a href="#" class="social-color-youtube"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-                        <li class="list-inline-item"><a href="#" class="social-color-linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                        <li class="list-inline-item"><a href="#" class="social-color-instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>  
-                      </ul>            
-                  </div>
-                </div>
-              </div>
-            </footer>
-            <!-- footer End -->
+<!-- Footer Start -->
+<footer>
+<div class="item-company">
+  <span class="text-light ">Events360&copy 2020</span>
+</div>
+<div class="item-social">
+  <p class="text-center">Connect with us</p>
+          <ul class="inline-list social-icons-list" style="padding: 0px">
+            <li class="list-inline-item"><a href="#" class="social-color-facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+            <li class="list-inline-item" ><a href="#" class="social-color-twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+            <li class="list-inline-item"><a href="#" class="social-color-youtube"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+            <li class="list-inline-item"><a href="#" class="social-color-linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+            <li class="list-inline-item"><a href="#" class="social-color-instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>  
+          </ul>
+</div>
+
+</footer>
+<!-- Footer End -->
+
                         
 
   </body>
