--- a/footer.html
+++ b/footer.html
@@ -13,22 +13,25 @@
 </head>
 <body>
 
-    <footer>
-        <div class="item-company">
-            <span class="text-light ">Events360&copy 2020</span>
-        </div>
-        <div class="item-social">
-            <p>Connect with us</p>
-                   <ul class="inline-list social-icons-list" style="padding: 0px">
-                      <li class="list-inline-item"><a href="#" class="social-color-facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                      <li class="list-inline-item" ><a href="#" class="social-color-twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                      <li class="list-inline-item"><a href="#" class="social-color-youtube"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-                      <li class="list-inline-item"><a href="#" class="social-color-linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                      <li class="list-inline-item"><a href="#" class="social-color-instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>  
-                    </ul>
-        </div>
+<!-- Footer Start -->
+<footer>
+<div class="item-company">
+    <span class="text-light ">Events360&copy 2020</span>
+</div>
+<div class="item-social">
+    <p class="text-center">Connect with us</p>
+            <ul class="inline-list social-icons-list" style="padding: 0px">
+                <li class="list-inline-item"><a href="#" class="social-color-facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                <li class="list-inline-item" ><a href="#" class="social-color-twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                <li class="list-inline-item"><a href="#" class="social-color-youtube"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+                <li class="list-inline-item"><a href="#" class="social-color-linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                <li class="list-inline-item"><a href="#" class="social-color-instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>  
+            </ul>
+</div>
 
-    </footer>
+</footer>
+<!-- Footer End -->
+  
     
 </body>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
